--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,17 @@
 @media only screen and (max-width: 1108 px) {
   
+  .wrapper {
+    width: 90%;
+  }
+  
+  #social {
+    position: absolute;
+    top: 82px;
+    right: 4%;
+    width: auto;
+  }
+  
+  #social a {
+    display: inline-block;
+  }
 }
