--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,5 +22,12 @@
     font-size: 85%;
   }
   
-  #logo
+  #logo h1 {
+    width: 35px;
+    height: 35px;
+  }
+  
+  #logo h2 {
+    font-size: 2.2em;
+  }
 }
